--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -83,6 +83,7 @@
     "nav-app-dashboard": "Panel",
     "nav-app-templates": "Plantillas",
     "nav-app-exercises": "Ejercicios",
+    "nav-app-current-workout": "Entrenamiento",
     "nav-app-logout": "Cerrar sesión",
     "button-new-exercise": "Nuevo ejercicio",
     "button-search-placeholder": "Buscar",
