--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -104,7 +104,10 @@
     "home-page-todays-weight": "Today's weight",
     "home-page-last-weight-placeholder": "Last:",
     "home-page-submit-weight": "Submit",
+    "home-page-last-weight": "Today you've registered a weight of",
+    "home-page-no-weight": "You haven't registered your weight today",
     "delete-text": "Delete",
     "cancel-text": "Cancel",
-    "delete-popup-title": "Are you sure you want to delete this?"
+    "delete-popup-title": "Are you sure you want to delete this?",
+    "extra-volume": "Volume"
 }
