--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -102,7 +102,7 @@
     "home-page-recent-workouts": "Entrenamientos recientes",
     "home-page-weight-progress": "Progreso de peso",
     "home-page-todays-weight": "Peso actual",
-    "home-page-last-weight-placeholder": "Ayer:",
+    "home-page-last-weight-placeholder": "Último:",
     "home-page-submit-weight": "Enviar",
     "home-page-last-weight": "Hoy has registrado un peso de",
     "home-page-no-weight": "No has registrado tu peso hoy",
