Add spinner component and enhance loading state in login form

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -100,12 +100,14 @@
     "tooltip-reps": "Repeticiones",
     "tooltip-day": "Día",
     "home-page-recent-workouts": "Entrenamientos recientes",
+    "home-page-no-recent-workouts": "Todavía no has registrado ningún entrenamiento",
     "home-page-weight-progress": "Progreso de peso",
     "home-page-todays-weight": "Peso actual",
     "home-page-last-weight-placeholder": "Último:",
     "home-page-submit-weight": "Enviar",
     "home-page-last-weight": "Hoy has registrado un peso de",
     "home-page-no-weight": "No has registrado tu peso hoy",
+    "home-page-no-weight-history": "Todavía no tienes ningún historial de peso",
     "delete-text": "Borrar",
     "cancel-text": "Cancelar",
     "delete-popup-title": "¿Estás seguro de que quieres borrar esto?",
