--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -100,12 +100,14 @@
     "tooltip-reps": "Reps",
     "tooltip-day": "Day",
     "home-page-recent-workouts": "Recent workouts",
+    "home-page-no-recent-workouts": "You haven't registered any workouts yet",
     "home-page-weight-progress": "Weight progress",
     "home-page-todays-weight": "Today's weight",
     "home-page-last-weight-placeholder": "Last:",
     "home-page-submit-weight": "Submit",
     "home-page-last-weight": "Today you've registered a weight of",
     "home-page-no-weight": "You haven't registered your weight today",
+    "home-page-no-weight-history": "You do not have any weight history yet",
     "delete-text": "Delete",
     "cancel-text": "Cancel",
     "delete-popup-title": "Are you sure you want to delete this?",
