--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -111,5 +111,8 @@
     "delete-text": "Delete",
     "cancel-text": "Cancel",
     "delete-popup-title": "Are you sure you want to delete this?",
-    "extra-volume": "Volume"
+    "extra-volume": "Volume",
+    "extend-text": "Extend",
+    "extend-session-popup-title": "Your session is about to expire",
+    "extend-session-popup-subtitle": "Do you want to extend it?"
 }
