Testing of Register and Login pages

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -72,8 +72,8 @@
     "register-form-or-register-with-text": "Or register with",
     "login-form-title": "Log in to your account",
     "login-form-subtitle": "Welcome back! Select method to log in:",
-    "login-form-or-login-with-text": "Or continue with email",
-    "login-form-email-label": "Email",
+    "login-form-or-login-with-text": "Or continue with username",
+    "login-form-email-label": "Username",
     "login-form-password-label": "Password",
     "login-form-remember-me-text": "Remember me",
     "login-form-submit-button": "Log in",
