--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -72,8 +72,8 @@
     "register-form-or-register-with-text": "O regístrate con",
     "login-form-title": "Inicia sesión en tu cuenta",
     "login-form-subtitle": "¡Bienvenido de nuevo! Selecciona el método para iniciar sesión:",
-    "login-form-or-login-with-text": "O continúa con email",
-    "login-form-email-label": "Email",
+    "login-form-or-login-with-text": "O continúa con usuario",
+    "login-form-email-label": "Usuario",
     "login-form-password-label": "Contraseña",
     "login-form-remember-me-text": "Recuérdame",
     "login-form-submit-button": "Iniciar sesión",
