Prevent user from been able to active the same subscription that he already has.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -119,6 +119,7 @@
   "session-expired-popup-title": "Your session has expired",
   "session-expired-popup-subtitle": "Please log in again",
   "subscribe-text": "Subscribe",
+  "already-subscribed-text": "Currently subscribed",
   "subscription-text": "Subscription",
   "subscription-features-text": "All features included",
   "cost-text": "Cost",
