--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -119,6 +119,7 @@
   "session-expired-popup-title": "Tu sesión ha expirado",
   "session-expired-popup-subtitle": "Por favor, inicia sesión de nuevo",
   "subscribe-text": "Suscríbete",
+  "already-subscribed-text": "Ya estás suscrito",
   "subscription-text": "Suscripción",
   "subscription-features-text": "Todas las características incluídas",
   "cost-text": "Coste",
