--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -126,5 +126,6 @@
   "short-month-text": "mes",
   "renewal-date-text": "Fecha de renovación",
   "month-text": "mes",
-  "cancelled-subscription": "Suscripción cancelada"
+  "cancelled-subscription": "Suscripción cancelada",
+  "finish-text": "Finalizar"
 }
