--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -127,5 +127,6 @@
   "renewal-date-text": "Fecha de renovación",
   "month-text": "mes",
   "cancelled-subscription": "Suscripción cancelada",
-  "finish-text": "Finalizar"
+  "finish-text": "Finalizar",
+  "weak-password-text": "Debe tener al menos 8 caracteres, 1 mayúscula, 1 minúscula, 1 número y 1 símbolo"
 }
