Styled messages of no weight history and no recent workouts

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,6 +101,7 @@
   "tooltip-day": "Day",
   "home-page-recent-workouts": "Recent workouts",
   "home-page-no-recent-workouts": "You haven't registered any workouts yet",
+  "home-page-no-recent-workouts-subtext": "List of your last workouts will appear here",
   "home-page-weight-progress": "Weight progress",
   "home-page-todays-weight": "Today's weight",
   "home-page-last-weight-placeholder": "Last:",
@@ -108,6 +109,7 @@
   "home-page-last-weight": "Today you've registered a weight of",
   "home-page-no-weight": "You haven't registered your weight today",
   "home-page-no-weight-history": "You do not have any weight history yet",
+  "home-page-no-weight-history-subtext": "Chart of your weight history will appear here",
   "delete-text": "Delete",
   "cancel-text": "Cancel",
   "delete-popup-title": "Are you sure you want to delete this?",
