--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -101,6 +101,7 @@
   "tooltip-day": "Día",
   "home-page-recent-workouts": "Entrenamientos recientes",
   "home-page-no-recent-workouts": "Todavía no has registrado ningún entrenamiento",
+  "home-page-no-recent-workouts-subtext": "Aquí aparecerán tus entrenamientos recientes",
   "home-page-weight-progress": "Progreso de peso",
   "home-page-todays-weight": "Peso actual",
   "home-page-last-weight-placeholder": "Último:",
@@ -108,6 +109,7 @@
   "home-page-last-weight": "Hoy has registrado un peso de",
   "home-page-no-weight": "No has registrado tu peso hoy",
   "home-page-no-weight-history": "Todavía no tienes ningún historial de peso",
+  "home-page-no-weight-history-subtext": "Aquí aparecerá una gráfica de tu progreso",
   "delete-text": "Borrar",
   "cancel-text": "Cancelar",
   "delete-popup-title": "¿Estás seguro de que quieres borrar esto?",
