Forms for forgot and reset password

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -80,6 +80,14 @@
   "login-form-forgot-password-text": "Forgot password?",
   "login-form-dont-have-account-text": "Don't have an account?",
   "login-form-create-account-text": "Create one",
+  "forgot-password-form-title": "Recover your password",
+  "forgot-password-form-subtitle": "Enter your email to receive a password reset link",
+  "forgot-password-form-submit-button": "Send reset link",
+  "reset-password-form-title": "Reset your password",
+  "reset-password-form-subtitle": "We’ve got you — just pick a new password and you’re good to go",
+  "reset-password-form-password-label": "New password",
+  "reset-password-form-password-confirm-label": "Confirm new password",
+  "reset-password-form-submit-button": "Reset password",
   "nav-app-dashboard": "Dashboard",
   "nav-app-templates": "Templates",
   "nav-app-exercises": "Exercises",
