--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -80,6 +80,14 @@
   "login-form-forgot-password-text": "¿Olvidaste tu contraseña?",
   "login-form-dont-have-account-text": "¿No tienes una cuenta?",
   "login-form-create-account-text": "Crea una",
+  "forgot-password-form-title": "Recupera tu contraseña",
+  "forgot-password-form-subtitle": "Ingresa tu email para recibir un enlace de recuperación",
+  "forgot-password-form-submit-button": "Enviar enlace de recuperación",
+  "reset-password-form-title": "Recupera tu contraseña",
+  "reset-password-form-subtitle": "Todo listo — solo te falta escoger una nueva contraseña y estarás dentro",
+  "reset-password-form-password-label": "Nueva contraseña",
+  "reset-password-form-password-confirm-label": "Confirmar contraseña",
+  "reset-password-form-submit-button": "Recuperar contraseña",
   "nav-app-dashboard": "Panel",
   "nav-app-templates": "Plantillas",
   "nav-app-exercises": "Ejercicios",
